[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Font100.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/sky.png" type="Texture" id=3]
[ext_resource path="res://scripts/Root.gd" type="Script" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Root" type="Node"]
script = ExtResource( 4 )

[node name="Ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 300 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 300 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 300 )

[node name="PlayerScore" type="Label" parent="."]
margin_left = 384.0
margin_top = 32.0
margin_right = 404.0
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyScore" type="Label" parent="."]
margin_left = 620.0
margin_top = 32.0
margin_right = 640.0
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -155.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TopBorder" type="StaticBody2D" parent="."]
position = Vector2( 512, 0 )

[node name="Collision" type="CollisionShape2D" parent="TopBorder"]
position = Vector2( 0, -10 )
scale = Vector2( 51, 1 )
shape = SubResource( 1 )

[node name="BotBorder" type="StaticBody2D" parent="."]
position = Vector2( 512, 610 )

[node name="Collision" type="CollisionShape2D" parent="BotBorder"]
scale = Vector2( 51, 1 )
shape = SubResource( 1 )

[node name="LeftGoal" type="Area2D" parent="."]
position = Vector2( 0, 300 )

[node name="Collision" type="CollisionShape2D" parent="LeftGoal"]
scale = Vector2( 1, 29.5 )
shape = SubResource( 2 )

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2( 1024, 300 )

[node name="Collision" type="CollisionShape2D" parent="RightGoal"]
scale = Vector2( 1, 29.5 )
shape = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
[connection signal="body_entered" from="LeftGoal" to="." method="_on_LeftGoal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_RightGoal_body_entered"]
